output.txt
Traceback (most recent call last):
  File "/home/timscripts/keepa_api/keepa-deals/Keepa_Deals.py", line 6, in <module>
    from field_mappings import FUNCTION_LIST
  File "/home/timscripts/keepa_api/keepa-deals/field_mappings.py", line 3, in <module>
    from stable_products import (
  File "/home/timscripts/keepa_api/keepa-deals/stable_products.py", line 19
    logging.debug(f"fetch_product_for_retry response for ASIN {asin}: stats_current={product[0].get('stats', {}).get('current', [])} if product else {}, offers_count={len(product[0].get('offers', [])) if product else 0}")
                                                                                                                                                                                                                            ^
SyntaxError: f-string: empty expression not allowed
